# home_flow

./: .env.template  .gitignore  Cargo.toml  README.md  clipper2_bridge.js  home_flow-a390ad9bb10ff3eb.js  home_flow-a390ad9bb10ff3eb_bg.wasm  index.html  justfile  manifest.json  update_readme.py
.github/workflows/: pages.yml  rust.yml
assets/: clipper2_bridge.js  homeflow.psd  manifest.json  sw.js
src/: app.rs  main.rs
src/app/: edit_mode.rs  edit_mode_render.rs  edit_mode_utils.rs  interaction.rs  layout.rs  layout_display.rs  presence_sensor.rs  render.rs  shape.rs  utils.rs  wall_render.rs
src/client/: clipper_wasm.rs  edit_mode.rs  edit_mode_render.rs  edit_mode_utils.rs  interaction.rs  light_render.rs  mod.rs  networking.rs  render.rs
src/common/: clipper_wasm.rs  color.rs  furniture.rs  layout.rs  layout_display.rs  light_render.rs  mod.rs  render.rs  shape.rs  template.rs  utils.rs
src/common/geo_buffer/: mod.rs  priority_queue.rs  skeleton.rs  vertex_queue.rs
src/common/geo_buffer/util/: coordinate.rs  mod.rs  ray.rs
src/server/: auth.rs  common_api.rs  fetch.rs  home_assistant.rs  mod.rs  presence.rs  routing.rs
