[package]
name = "home_flow"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
log = "0.4.22"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = "1.3.3"
ron = "0.8.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "js", "serde"] }
parking_lot = "0.12.3"
indexmap = "2.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
nestify = "0.3.3"
diff = "0.1.13"
glam = { version = "0.29.0", features = ["serde"] }
nalgebra = "0.33.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
geo = "0.28.0"
geo-types = { version = "0.7.13", features = ["serde"] }

# GUI dependencies
egui = { version = "0.28.1", features = ["serde"], optional = true }
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
], optional = true }
egui-notify = { version = "0.15.0", optional = true }
ehttp = { version = "0.5.0", optional = true }

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"

# Server dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "5.0.0"
axum = { version = "0.7.5", default-features = false, features = [
    "http1",
    "tokio",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "fs",
    "compression-deflate",
    "compression-gzip",
] }
chrono = { version = "0.4.38", features = [
    "serde",
    "alloc",
    "now",
], default-features = false }
geo-clipper = "0.8.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["default-tls", "json"] }
argon2 = "0.5.3"
rand = "0.8.5"

[features]
default = ["gui"]
gui = ["egui", "eframe", "egui-notify", "ehttp"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
