[package]
name = "home_flow"
version = "0.2.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
log = "0.4.22"
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bincode = "1.3.3"
ron = "0.8.1"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "js", "serde"] }
parking_lot = "0.12.3"
ahash = { version = "0.8.11", features = ["serde"] }
indexmap = "2.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
bitflags = { version = "2.6.0", features = ["serde"] }
nestify = "0.3.3"
diff = "0.1.13"
glam = { version = "0.29.2", features = ["serde"] }
nalgebra = { version = "0.33.2", features = ["std"], default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png"] }
geo = "0.29.2"
geo-types = { version = "0.7.14", features = ["serde"] }

# GUI dependencies
egui = { version = "0.29.1", features = ["serde"], optional = true }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
], optional = true }
egui-notify = { version = "0.17.0", optional = true }
ehttp = { version = "0.5.0", optional = true }

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"

# Server dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "5.0.0"
axum = { version = "0.7.9", default-features = false, features = [
    "http1",
    "tokio",
] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
tower-http = { version = "0.6.2", features = [
    "fs",
    "compression-deflate",
    "compression-gzip",
] }
chrono = { version = "0.4.38", features = [
    "serde",
    "alloc",
    "now",
], default-features = false }
dotenvy = "0.15.7"
argon2 = "0.5.3"
rand = "0.8.5"

[features]
default = ["gui"]
gui = ["egui", "eframe", "egui-notify", "ehttp"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
